WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84216
REGRESSION(
r112177
): Numbered list item rendered bulleted
https://bugs.webkit.org/show_bug.cgi?id=84216
Summary
REGRESSION(r112177): Numbered list item rendered bulleted
David Barr
Reported
2012-04-17 17:33:26 PDT
What steps will reproduce the problem? 1. Create a <OL style="list-style-type: decimal;"> 2. Append <LI> children with "list-style-position: outside;" What is the expected result? A numbered list item What happens instead? A bulleted list item Confirmed with WebKit nightly, Version 5.1.5 (6534.55.3,
r114368
).
Attachments
Patch
(1.85 KB, patch)
2012-04-18 16:00 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Patch
(5.08 KB, patch)
2012-04-18 18:08 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Patch
(5.91 KB, patch)
2012-04-18 18:41 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-04
(6.06 MB, application/zip)
2012-04-18 19:41 PDT
,
WebKit Review Bot
no flags
Details
Patch
(6.94 KB, patch)
2012-04-18 20:08 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-02
(6.22 MB, application/zip)
2012-04-18 22:40 PDT
,
WebKit Review Bot
no flags
Details
Patch
(7.54 KB, patch)
2012-04-19 00:01 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.64 KB, patch)
2012-04-19 16:37 PDT
,
David Barr
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
David Barr
Comment 1
2012-04-17 17:52:07 PDT
Ran bisect-builds: Works:
r112169
Fails:
r112225
http://trac.webkit.org/log/trunk/?rev=112225&stop_rev=112170
David Barr
Comment 2
2012-04-17 18:52:04 PDT
Consistent with my first guess, manually narrowed to:
http://trac.webkit.org/changeset/112177
"cssText should use shorthand notations"
https://bugs.webkit.org/show_bug.cgi?id=81737
David Barr
Comment 3
2012-04-17 20:52:31 PDT
Also related:
http://trac.webkit.org/changeset/112321
"cssText should not generate literal 'initial' in shorthand properties"
https://bugs.webkit.org/show_bug.cgi?id=82364
Patching WebCore::StylePropertySet::getShorthandValue to return inherit or initial respectively: list-style: inherit outside inherit; Whereas, without that change the inspector displayed: list-style: outside; list-style-type: initial; list-style-image: initial; Could be a shorthand parsing issue.
Alexey Proskuryakov
Comment 4
2012-04-17 22:43:12 PDT
<
rdar://problem/11270257
>
Ryosuke Niwa
Comment 5
2012-04-17 22:57:05 PDT
Apparently my change exposed an existing bug in parser :(
David Barr
Comment 6
2012-04-18 15:23:03 PDT
I've thought about it a bit more after discussing on IRC. The cause appears to be that StylePropertySet::getShorthandValue() is not bailing out when there are not enough longhand rules defined to form a corresponding shortHand rule.
David Barr
Comment 7
2012-04-18 16:00:27 PDT
Created
attachment 137793
[details]
Patch Uploading without new tests to determine test impact.
WebKit Review Bot
Comment 8
2012-04-18 16:06:02 PDT
Attachment 137793
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Barr
Comment 9
2012-04-18 17:14:09 PDT
Downstream bug report:
http://crbug.com/122606
David Barr
Comment 10
2012-04-18 18:08:38 PDT
Created
attachment 137811
[details]
Patch There is at least one shorthand that does not imply ommitted values, -webkit-transform-origin.
David Barr
Comment 11
2012-04-18 18:41:51 PDT
Created
attachment 137814
[details]
Patch Updated css3/flexbox/css-properties.html
WebKit Review Bot
Comment 12
2012-04-18 19:40:46 PDT
Comment on
attachment 137814
[details]
Patch
Attachment 137814
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/12437083
New failing tests: fast/css/transform-inline-style.html fast/css/uri-token-parsing.html fast/css/transform-inline-style-remove.html
WebKit Review Bot
Comment 13
2012-04-18 19:41:03 PDT
Created
attachment 137823
[details]
Archive of layout-test-results from ec2-cr-linux-04 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-04 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
David Barr
Comment 14
2012-04-18 20:08:15 PDT
Created
attachment 137827
[details]
Patch Updated LayoutTests/fast/css/uri-token-parsing.html again. Expectations are embedded in the test, yuck.
WebKit Review Bot
Comment 15
2012-04-18 22:40:15 PDT
Comment on
attachment 137827
[details]
Patch
Attachment 137827
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/12439113
New failing tests: fast/css/transform-inline-style.html fast/css/transform-inline-style-remove.html
WebKit Review Bot
Comment 16
2012-04-18 22:40:21 PDT
Created
attachment 137839
[details]
Archive of layout-test-results from ec2-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-02 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
David Barr
Comment 17
2012-04-19 00:01:34 PDT
Created
attachment 137854
[details]
Patch
Ryosuke Niwa
Comment 18
2012-04-19 16:25:55 PDT
Comment on
attachment 137854
[details]
Patch r=me provided a comment is added as to why no test is added per IRC discussion.
David Barr
Comment 19
2012-04-19 16:37:55 PDT
Created
attachment 138007
[details]
Patch for landing
WebKit Review Bot
Comment 20
2012-04-19 17:08:40 PDT
Comment on
attachment 138007
[details]
Patch for landing Clearing flags on attachment: 138007 Committed
r114699
: <
http://trac.webkit.org/changeset/114699
>
WebKit Review Bot
Comment 21
2012-04-19 17:09:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug