REGRESSION(r112177): Numbered list item rendered bulleted https://bugs.webkit.org/show_bug.cgi?id=84216

Patch by David Barr <davidbarr@chromium.org> on 2012-04-19
Reviewed by Ryosuke Niwa.

Shorthands that imply omitted values cannot be derived from
an incomplete set of longhand rules.

No new tests; updated existing tests that should have caught this.

Source/WebCore:

* css/CSSParser.cpp:
(WebCore::CSSParser::parseTransformOriginShorthand):
Set implicit initial for Z when omitted.
* css/StylePropertySet.cpp:
(WebCore::StylePropertySet::getShorthandValue):

LayoutTests:

* css3/flexbox/css-properties.html:
* fast/css/cssText-shorthand.html:
* fast/css/uri-token-parsing-expected.txt:
* fast/css/uri-token-parsing.html:
* fast/dom/css-dom-read-2-expected.txt:

Canonical link: https://commits.webkit.org/101898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114699 268f45cc-cd09-0410-ab3c-d52691b4dbfc